# Twitter-Dashboard

./: .gitignore  README.md  pyproject.toml
tests/: test_twitter_dashboard.py
twitter_dashboard/: TASKS.md  eda.ipynb  get_twitter_data.py  global_twitter_data.py  mongo_data.py  personal_twitter_data.py  quick_test.ipynb  sentiment_analysis.py  tne.ipynb
twitter_dashboard/dash_js/backend/app/: api.py
twitter_dashboard/dash_js/frontend/: package-lock.json  package.json
twitter_dashboard/dash_js/frontend/src/: App.css  App.js
twitter_dashboard/dash_js/frontend/src/API/: index.js
twitter_dashboard/dash_js/frontend/src/Components/AppFooter/: index.js
twitter_dashboard/dash_js/frontend/src/Components/AppHeader/: index.js
twitter_dashboard/dash_js/frontend/src/Components/AppRoutes/: index.js
twitter_dashboard/dashboard/backend/app/: api.py
twitter_dashboard/dashboard/frontend/: package-lock.json  package.json
twitter_dashboard/dashboard/frontend/src/: App.tsx  PokemonList.jsx  TypedApp.tsx  index.tsx
twitter_dashboard/dashboard/frontend/src/components/: Tweets.jsx  Tweets.tsx
twitter_dashboard/dashboard_js/backend/app/: api.py
twitter_dashboard/dashboard_js/frontend/: package-lock.json  package.json
twitter_dashboard/dashboard_js/frontend/src/: App.tsx  Counter.tsx  Pagination.tsx  PokemonList.tsx  index.tsx
twitter_dashboard/data/: test_set.csv
twitter_dashboard/fastapi_react/backend/app/: api.py
twitter_dashboard/fastapi_react/frontend/: package-lock.json
twitter_dashboard/fastapi_react/frontend/src/components/: Todos.jsx
(+4 files in other folders)
