[tool.poetry]
name = "twitter_dashboard"
version = "0.1.0"
description = ""
authors = ["Jason Zhang <jasonjzhang17@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
