[tool.poetry]
name = "twitter_dashboard"
version = "0.1.0"
description = ""
authors = ["Jason Zhang <jasonjzhang17@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.2"
tweepy = "^4.12.1"
numpy = "^1.23.5"
pymongo = "^4.3.3"
transformers = "^4.24.0"
scipy = "^1.9.3"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
